added sugang checker

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-request/request.xml
-response/response.json
-response/response.xml
+request/request1.xml
+request/request2.xml
+response/response1.json
+response/response1.xml
+response/response2.json
+response/response2.xml
