added closed lecture checker

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 request/request1.xml
 request/request2.xml
+request/request3.xml
 response/response1.json
 response/response1.xml
 response/response2.json
 response/response2.xml
+response/response3.json
+response/response3.xml
