--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 request/request1.xml
 request/request2.xml
 request/request3.xml
+request/request4.xml
 response/response1.json
 response/response1.xml
 response/response2.json
 response/response2.xml
 response/response3.json
 response/response3.xml
+response/response4.json
+response/response4.xml
