--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ request/request1.xml
 request/request2.xml
 request/request3.xml
 request/request4.xml
-response/
+response/2023-2
+response/response1.json
+response/response1.xml
